# opencl_kernels

./: .clang-format  .cmake-format.yaml  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build.mk  build_wheels.mk  logs.md  requirements.txt  run_kernel.py  setup.py  test_logs.md
benchmark/: CMakeLists.txt  bench_binary_op.cc
csrc/: CMakeLists.txt  binary_op.cc  binary_op.h  common.cc  common.h  kernel.cc  kernel.h  kernel_wrapper.cc  kernel_wrapper.h  ocl_demo.h  ocl_manager.cc  ocl_manager.h  oclk_pyapi.cc  oclk_pyapi.h  opencl_error_code.h  runner.cc  runner.h  timer.cc  timer.h  utils.h
csrc/operator/: binary_op.cc  binary_op.h  buffer_image_converter.cc  buffer_image_converter.h
csrc/utils/: buffer_wrapper.cc  buffer_wrapper.h  calc.cc  calc.h  image_wrapper.cc  image_wrapper.h
docs/: api_reference.rst  benchmark.rst  conf.py  index.rst  install.rst  quick_example.rst  requirements.txt  tune.rst
examples/: add.cl  add.py  bench_add.yaml  gather.py  gather_kernel.cl
examples/tune/: add.cl  tune_add.py
helper/: README.md  helper.cc  helper.h  timer.cc  timer.h
kernel/: binary_op.cl  buffer_image.cl
kernels/: add.cl
oclk/: .gitignore  __init__.py  __main__.py  benchmark.py  benchmark_config.py  cli.py  functions.py  oclk_C.pyi  oclk_runner.py  oclk_runner.pyi  tuner.py  utils.py
src/: CMakeLists.txt  common.cc  common.h  kernel.cc  kernel.h  timer.h
test/: add.cl  bench_add.yaml  test_run.py
tests/: CMakeLists.txt  test_binary_op.cc  test_ctx.cc  test_image_buffer.cc  test_main.cc
